fixed project images overflow

--- a/public/style.css
+++ b/public/style.css
@@ -99,12 +99,12 @@ a:hover {
     position: absolute;
     top: 100%;
     right: 0%;
-    background-color: rgba(0, 0, 0, 0);
+    background-color: white;
     width: fit-content;
     max-height: 0;
     overflow: hidden;
     transition: all 300ms ease-in-out;
-    opacity: 0;
+    border-radius: 2rem;
     transform: translate(0px, -25px);
 }
 
@@ -343,6 +343,11 @@ section {
     flex-direction: column;
 }
 
+.experience-container {
+    margin: auto;
+    max-width: 70vw;
+}
+
 .article-container {
     display: flex;
     text-align: initial;
@@ -367,6 +372,11 @@ article .icon {
 
 #projects {
     position: relative;
+}
+
+.projects-container {
+    margin: auto;
+    max-width: 1865px;
 }
 
 .color-container {
